<resources>
    <string name="serverClientId">354425670015-135aobr74423lftrohpoqb9kml25ip43.apps.googleusercontent.com</string>
    <string name="app_name">itime</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="login_index_subtitle">Set up a meeting or event faster than ever before!</string>
    <string name="signup">SIGN UP</string>
    <string name="login">LOG IN</string>
    <string name="login_input_email_title">Email Address</string>
    <string name="login_input_email_subtitle">Enter your university student/staff email address</string>
    <string name="login_input_email_edit_title">YOUR EMAIL</string>
    <string name="login_input_email_edit_hint">Email</string>
    <string name="login_input_email_agreement">By signing up, I agree to the Term of Use</string>
    <string name="login_input_password_title">Set A Password</string>
    <string name="login_input_password_subtitle">Password should contain at least 8 characters</string>
    <string name="login_input_password_edit_title">PASSWORD</string>
    <string name="login_input_password_next">NEXT</string>
    <string name="your_name">YOUR NAME</string>
    <string name="complete_your_profile_so_that_your_friends_can_recognize_you">Complete your profile so that your friends can recognize you</string>
    <string name="login_find_friend_title">Find Your Friends</string>
    <string name="login_find_friend_subtitle">You can add your friends from phone contacts and socials networks.</string>
    <string name="login_find_friend_button1">ADD FROM CONTACT</string>
    <string name="login_find_friend_button2">ADD FROM GMAIL</string>
    <string name="login_find_friend_skip">SKIP</string>
    <string name="login_title">Log In</string>
    <string name="login_input_password_hint">Password</string>
    <string name="login_forget_password">Forget Your Password?</string>
    <string name="login_no_account_signup">Don’t have an iTime account?<u>Sign Up</u></string>
    <string name="login_fail_alert_title">Log In Failed</string>
    <string name="login_fail_alert_msg">Please check that your email address and password are correct</string>
    <string name="login_fail_alert_btn">Try Again</string>
    <string name="login_reset_password_title">Reset Your Password</string>
    <string name="login_reset_password_subtitle">Enter your email address to reset your password</string>
    <string name="login_reset_password_edit_title">YOUR EMAIL</string>
    <string name="login_reset_password_edit_hint">Email</string>
    <string name="login_reset_password_remember_password"><u>Remember your password?</u></string>
    <string name="login_reset_password_btn_submit">SUBMIT</string>
    <string name="login_email_sent_title">EMAIL SENT</string>
    <string name="login_email_sent_subtitle">We just sent instructions for resetting your pass word to this account.</string>
    <string name="login_email_sent_btn">DONE</string>
    <string name="tab_calendar">Calendar</string>
    <string name="tab_contact">Contact</string>
    <string name="tab_message">Message</string>
    <string name="tab_setting">Setting</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="cancel">Cancel</string>
    <string name="new_event">New Event</string>
    <string name="done">Done</string>
    <string name="send">Send</string>
    <string name="search">Search</string>
    <string name="edit_event">Edit Event</string>
    <string name="edit">Edit</string>
    <string name="event_title">EventTitle</string>
    <string name="event_attendee">EventAttendee</string>
    <string name="event_select_time">EventSelectTime</string>
    <string name="event_start_hour">EventStartHour</string>
    <string name="event_start_minute">EventStartMinute</string>
    <string name="event_end_hour">EventEndHour</string>
    <string name="event_end_minute">EventEndMinute</string>
    <string name="start_event_tag">StartEventTag</string>
    <string name="end_event_tag">EndEventTag</string>
    <string name="event_start_day_of_week">EventStartDayOfWeek</string>
    <string name="event_start_day">EventStartDay</string>
    <string name="event_start_month">EventStartMonth</string>
    <string name="event_start_year">EventStartYear</string>
    <string name="event_end_day_of_week">EventEndDayOfWeek</string>
    <string name="event_end_day">EventEndDay</string>
    <string name="event_end_month">EventEndMonth</string>
    <string name="event_end_year">EventEndYear</string>
    <string name="event_location">EventLocation</string>
    <string name="event_repeat">EventRepeat</string>
    <string name="event_url">EventUrl</string>
    <string name="event_note">EventNote</string>
    <string name="event_first_proposed_time">EventFirstProposedTime</string>
    <string name="event_second_proposed_time">EventSecondProposedTime</string>
    <string name="event_third_proposed_time">EventThirdProposedTime</string>
    <string name="event_calendar_type">EventCalendarType</string>
    <string name="event_default_end_repeate">Never</string>
    <string name="event_title_response">Messages</string>
    <string name="next">next</string>
    <string name="back">Back</string>
    <string name="delete_event">Delete Event</string>
    <string name="select_one_or_more_timeslot">Select One Or More Timeslot</string>
    <string name="select_one_timeslot">Select One Timeslot</string>
    <string name="no_repeat">No Repeat</string>
    <string name="no_location">No Location</string>
    <string name="reject_all">Reject All</string>
    <string name="all_rejected">All Rejected</string>
    <string name="no_title">No Title</string>
    <string name="none">None</string>
    <string name="view_in_calendar">View in Calendar</string>
    <string name="invitee">Invitee</string>
    <string name="url">URL</string>
    <string name="description">Note</string>
    <string name="photo">Photos</string>
    <string name="event_details">Event Details</string>
    <string name="new_invitation">New Invitation</string>
    <string name="event_proposed_timeslots">Proposed Timeslots</string>
    <string name="event_starts">Starts</string>
    <string name="event_ends">Ends</string>
    <string name="reason">Reason...</string>
    <string name="please_enter_the_reason_of_rejecting_this_event">Please enter the reason of rejecting this event</string>
    <string name="reject_this_event">Reject This Event</string>
    <string name="event">event</string>
    <string name="timeslot_next_btn">next</string>
    <string name="calendar_type">Calendar Type</string>
    <string name="alert_time">Alert Time</string>
    <string name="allow_invitee_to_see_each_other">Allow Invitee to See Each Other</string>
    <string name="all_day">All Day</string>
    <string name="accept">Accept</string>
    <string name="rejected">Rejected</string>
    <string name="not_responded">Not Responded</string>
    <string name="confirm">confirm</string>
    <string name="repeat">Repeat</string>
    <string name="work">Work</string>
    <string name="private_calendar">Private</string>
    <string name="more_invitees"> %1$s and %2$d more</string>
    <string name="choose_alert_time">Choose Alert Time</string>
    <string name="five_mintues_before">5 minutes before</string>
    <string name="fifteen_minutes_before">15 minutes before</string>
    <string name="thirty_minutes_before">30 minutes before</string>
    <string name="one_hour_before">1 hour before</string>
    <string name="two_hours_before">2 hours before</string>
    <string name="one_day_before">1 day before</string>
    <string name="two_days_before">2 days before</string>
    <string name="one_week_before">1 week before, as email</string>
    <string name="event_quit_repeat_text1">Quit This Occurence</string>
    <string name="event_quit_repeat_text2">Quit All Occurences</string>
    <string name="event_delete_repeat_text1">Delete This Event</string>
    <string name="event_delete_repeat_text2">Delete All Future Events</string>
    <string name="take_photo">Take photo</string>
    <string name="notifications">Notifications</string>
    <string name="setting_notifications_subtext1">Enable or disable iTime Notifications via
“Settings”->“Notifications” on your iPhone.</string>
    <string name="setting_show_preview_Text">Show Preview Text</string>
    <string name="setting_notifications_subtext2">Message notifications will contain event summary when enabled</string>
    <string name="setting_in_app_alert_sound">In-App Alert Sound</string>
    <string name="setting_vibrate">Vibrate</string>
    <string name="setting_notifications_subtext3">Specify preference to be notified by Sound or Vibration when receiving new notifications</string>
    <string name="setting_reset_password_subtext1">Enter a new password for this account. You can use the Email and the password to log in to iTime next time.</string>
    <string name="setting_email">Email</string>
    <string name="setting_password">Password</string>
    <string name="setting_confirm">Confirm</string>
    <string name="setting_password_hint">New iTime password</string>
    <string name="setting_confirm_hint">Confirm password</string>
</resources>