<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center">
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/reject_this_event"
        android:textStyle="bold"
        android:gravity="center"
        />
    <TextView
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:textSize="14sp"
        android:text="@string/please_enter_the_reason_of_rejecting_this_event"
        android:gravity="center"/>
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:hint="@string/reason"
        android:background="@drawable/event_reject_edit_text_background"
        />

</LinearLayout>