<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="loginVM"
            type="org.unimelb.itime.ui.viewmodel.LoginViewModel" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:clickable="true"
        >

        <!-- close btn-->
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="17dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/icon_close"
            android:layout_gravity="left|top"
            />

        <!-- logo email-->
        <ImageView
            android:layout_width="88dp"
            android:layout_height="76dp"
            android:layout_marginTop="46dp"
            android:src="@drawable/icon_email"
            />
        <TextView
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="28sp"
            android:gravity="center"
            android:text="@string/login_input_email_title"
            android:textColor="@color/color_8190A7"/>
        <TextView
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/login_input_email_subtitle"
            android:textColor="@color/color_C0C7D3"/>

        <!-- input email layout -->
        <LinearLayout
            android:layout_width="275dp"
            android:layout_height="64dp"
            android:layout_marginTop="44dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="13dp"
                android:layout_marginStart="20dp"
                android:text="@string/login_input_email_edit_title"
                android:textSize="11sp"
                android:textColor="@color/color_64AFF2"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:hint="@string/login_input_email_edit_hint"
                android:textSize="18sp"
                android:textColorHint="@color/color_C0C7D3"
                android:textColor="@color/color_3D5372"
                android:background="@android:color/transparent"
                android:onFocusChange="@{loginVM.onInputEmailEditFocusChange}"
                android:focusable="true"
                android:focusableInTouchMode="true"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="13dp"
                android:background="@color/color_C0C7D3"/>
        </LinearLayout>
        
        <TextView
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:layout_marginTop="138dp"
            android:text="@string/signup"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/selector_signup_btn_bg"
            android:onClick="@{loginVM.onIndexBtnSignInClick()}"
            />
    </LinearLayout>
</layout>
